html changes added!

--- a/NewsLetterProject/src/main/webapp/index.html
+++ b/NewsLetterProject/src/main/webapp/index.html
@@ -6,6 +6,7 @@
   </head>
 <body>
 <h3> Subscription Form </h3>
+<h6> News Letter Subscription</h6>
 <form action="CreateTaskServlet">
 Email id <input type="text" name="emailid"/>
 <input type="submit" value="Subscribe"/>
