Added Cron Operations

--- a/NewsLetterProject/src/main/webapp/index.html
+++ b/NewsLetterProject/src/main/webapp/index.html
@@ -7,9 +7,12 @@
 <body>
 <h3> Subscription Form </h3>
 <h6> News Letter Subscription</h6>
-<form action="CreateTaskServlet">
+<form action="CreateTaskServlet" method="post">
 Email id <input type="text" name="emailid"/>
 <input type="submit" value="Subscribe"/>
+</form>
+<form action="hello">
+Cron <input type="submit" value="cronOperation"/>
 </form>
 </body>
  
