URL fetch objects added

--- a/NewsLetterProject/src/main/webapp/index.html
+++ b/NewsLetterProject/src/main/webapp/index.html
@@ -14,6 +14,10 @@ Email id <input type="text" name="emailid"/>
 <form action="hello">
 Cron <input type="submit" value="cronOperation"/>
 </form>
+
+<form action="urlFetch" method="post">
+<input type="submit" value="Fetch"/>
+</form>
 </body>
  
 </html>
